// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
}
"
`;

exports[`List of strings, locations and references schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
  Bar
}

type EntityInfo {
  id: ID!
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  strings: [String!]
  locations: [Location!]
  bars: [Bar!]
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

type Bar implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

interface AdminEntity {
  id: ID!
  _name: String!
  _type: EntityType!
  _version: Int!
  _publishState: EntityPublishState!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFoo implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
  strings: [String!]
  locations: [Location!]
  bars: [AdminBar!]
}

input AdminFooCreateInput {
  id: ID
  _type: EntityType
  _name: String!
  strings: [String!]
  locations: [LocationInput!]
  bars: [AdminReferenceInput!]
}

input AdminFooUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
  strings: [String!]
  locations: [LocationInput!]
  bars: [AdminReferenceInput!]
}

type AdminBar implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
}

input AdminBarCreateInput {
  id: ID
  _type: EntityType
  _name: String!
}

input AdminBarUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
  createBarEntity(entity: AdminBarCreateInput!): AdminBar
  updateBarEntity(entity: AdminBarUpdateInput!): AdminBar
}
"
`;

exports[`Multiple references with entityTypes schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
  Bar
  Baz
}

type EntityInfo {
  id: ID!
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  noMeansAll: Entity
  bar: Bar
  bazBar: _BarOrBaz
  fooBarBaz: _BarOrBazOrFoo
  barBarBar: Bar
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

type Bar implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

type Baz implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

interface AdminEntity {
  id: ID!
  _name: String!
  _type: EntityType!
  _version: Int!
  _publishState: EntityPublishState!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFoo implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
  noMeansAll: AdminEntity
  bar: AdminBar
  bazBar: _AdminBarOrBaz
  fooBarBaz: _AdminBarOrBazOrFoo
  barBarBar: AdminBar
}

input AdminFooCreateInput {
  id: ID
  _type: EntityType
  _name: String!
  noMeansAll: AdminReferenceInput
  bar: AdminReferenceInput
  bazBar: AdminReferenceInput
  fooBarBaz: AdminReferenceInput
  barBarBar: AdminReferenceInput
}

input AdminFooUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
  noMeansAll: AdminReferenceInput
  bar: AdminReferenceInput
  bazBar: AdminReferenceInput
  fooBarBaz: AdminReferenceInput
  barBarBar: AdminReferenceInput
}

type AdminBar implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
}

input AdminBarCreateInput {
  id: ID
  _type: EntityType
  _name: String!
}

input AdminBarUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
}

type AdminBaz implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
}

input AdminBazCreateInput {
  id: ID
  _type: EntityType
  _name: String!
}

input AdminBazUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
}

enum _BarOrBaz {
  Bar
  Baz
}

enum _BarOrBazOrFoo {
  Bar
  Baz
  Foo
}

enum _AdminBarOrBaz {
  AdminBar
  AdminBaz
}

enum _AdminBarOrBazOrFoo {
  AdminBar
  AdminBaz
  AdminFoo
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
  createBarEntity(entity: AdminBarCreateInput!): AdminBar
  updateBarEntity(entity: AdminBarUpdateInput!): AdminBar
  createBazEntity(entity: AdminBazCreateInput!): AdminBaz
  updateBazEntity(entity: AdminBazUpdateInput!): AdminBaz
}
"
`;

exports[`One empty entity type schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
}

type EntityInfo {
  id: ID!
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

interface AdminEntity {
  id: ID!
  _name: String!
  _type: EntityType!
  _version: Int!
  _publishState: EntityPublishState!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFoo implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
}

input AdminFooCreateInput {
  id: ID
  _type: EntityType
  _name: String!
}

input AdminFooUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
}
"
`;

exports[`Rich text schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
}

type EntityInfo {
  id: ID!
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  body: RichText
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

interface AdminEntity {
  id: ID!
  _name: String!
  _type: EntityType!
  _version: Int!
  _publishState: EntityPublishState!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFoo implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
  body: AdminRichText
}

input AdminFooCreateInput {
  id: ID
  _type: EntityType
  _name: String!
  body: AdminRichTextInput
}

input AdminFooUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
  body: AdminRichTextInput
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
}
"
`;

exports[`Two entity types with reference schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
  Bar
}

type EntityInfo {
  id: ID!
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  fooField: String
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

type BarFields {
  barField1: String
  barField2: Entity
  barField3: Location
}

type Bar implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: BarFields!
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

interface AdminEntity {
  id: ID!
  _name: String!
  _type: EntityType!
  _version: Int!
  _publishState: EntityPublishState!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFoo implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
  fooField: String
}

input AdminFooCreateInput {
  id: ID
  _type: EntityType
  _name: String!
  fooField: String
}

input AdminFooUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
  fooField: String
}

type AdminBar implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
  barField1: String
  barField2: AdminEntity
  barField3: Location
}

input AdminBarCreateInput {
  id: ID
  _type: EntityType
  _name: String!
  barField1: String
  barField2: AdminReferenceInput
  barField3: LocationInput
}

input AdminBarUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
  barField1: String
  barField2: AdminReferenceInput
  barField3: LocationInput
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
  createBarEntity(entity: AdminBarCreateInput!): AdminBar
  updateBarEntity(entity: AdminBarUpdateInput!): AdminBar
}
"
`;

exports[`Value type schema spec Generated QL schema 1`] = `
"interface Node {
  id: ID!
}

type PageInfo {
  hasNextPage: Boolean!
  hasPreviousPage: Boolean!
  startCursor: String!
  endCursor: String!
}

enum EntityType {
  Foo
  Bar
}

type EntityInfo {
  id: ID!
  name: String!
}

interface Entity implements Node {
  id: ID!
  info: EntityInfo!
}

enum ValueType {
  ValueOne
  ValueList
  NestedValue
}

interface Value {
  _type: ValueType!
}

type RichText {
  blocksJson: String!
  entities: [Entity]
}

type Location {
  lat: Float!
  lng: Float!
}

input LocationInput {
  lat: Float!
  lng: Float!
}

input BoundingBoxInput {
  minLat: Float!
  maxLat: Float!
  minLng: Float!
  maxLng: Float!
}

type FooFields {
  valueOne: ValueOne
  unspecifiedValue: Value
  valueOneOrList: _ValueListOrValueOne
  nestedValue: NestedValue
}

type Foo implements Node & Entity {
  id: ID!
  info: EntityInfo!
  fields: FooFields!
}

type Bar implements Node & Entity {
  id: ID!
  info: EntityInfo!
}

type ValueOne implements Value {
  _type: ValueType!
  one: String
  two: Bar
  three: Location
}

type ValueList implements Value {
  _type: ValueType!
  one: [String!]
  two: [Bar!]
  three: [Location!]
}

type NestedValue implements Value {
  _type: ValueType!
  text: String
  child: NestedValue
}

enum EntityPublishState {
  draft
  published
  modified
  withdrawn
  archived
}

interface AdminEntity {
  id: ID!
  _name: String!
  _type: EntityType!
  _version: Int!
  _publishState: EntityPublishState!
}

type AdminEntityEdge {
  node: AdminEntity
  cursor: String!
}

type AdminEntityConnection {
  pageInfo: PageInfo!
  edges: [AdminEntityEdge]
  totalCount: Int!
}

input AdminQueryInput {
  entityTypes: [EntityType]
  referencing: ID
  boundingBox: BoundingBoxInput
  order: String
  text: String
}

input AdminReferenceInput {
  id: ID!
}

input EntityVersionInput {
  id: ID!
  version: Int!
}

interface AdminValue {
  _type: ValueType!
}

type AdminRichText {
  blocksJson: String!
  entities: [AdminEntity]
}

input AdminRichTextInput {
  blocksJson: String!
}

type EntityVersionInfo {
  version: Int!
  published: Boolean!
  createdBy: ID!
  createdAt: String!
}

type EntityHistory {
  id: ID!
  versions: [EntityVersionInfo]!
}

type PublishingEvent {
  version: Int
  publishedBy: ID!
  publishedAt: String!
}

type PublishingHistory {
  id: ID!
  events: [PublishingEvent]!
}

type EntityPublishPayload {
  id: ID!
  publishState: EntityPublishState!
}

type AdminFoo implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
  valueOne: AdminValueOne
  unspecifiedValue: AdminValue
  valueOneOrList: _AdminValueListOrValueOne
  nestedValue: AdminNestedValue
}

input AdminFooCreateInput {
  id: ID
  _type: EntityType
  _name: String!
  valueOneJson: String
  valueOne: AdminValueOneInput
  unspecifiedValueJson: String
  valueOneOrListJson: String
  nestedValueJson: String
  nestedValue: AdminNestedValueInput
}

input AdminFooUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
  valueOneJson: String
  valueOne: AdminValueOneInput
  unspecifiedValueJson: String
  valueOneOrListJson: String
  nestedValueJson: String
  nestedValue: AdminNestedValueInput
}

type AdminBar implements AdminEntity {
  id: ID!
  _type: EntityType!
  _name: String!
  _version: Int!
  _publishState: EntityPublishState!
}

input AdminBarCreateInput {
  id: ID
  _type: EntityType
  _name: String!
}

input AdminBarUpdateInput {
  id: ID!
  _type: EntityType
  _name: String
}

type AdminValueOne implements AdminValue {
  _type: ValueType!
  one: String
  two: AdminBar
  three: Location
}

input AdminValueOneInput {
  _type: ValueType!
  one: String
  two: AdminReferenceInput
  three: LocationInput
}

type AdminValueList implements AdminValue {
  _type: ValueType!
  one: [String!]
  two: [AdminBar!]
  three: [Location!]
}

input AdminValueListInput {
  _type: ValueType!
  one: [String!]
  two: [AdminReferenceInput!]
  three: [LocationInput!]
}

type AdminNestedValue implements AdminValue {
  _type: ValueType!
  text: String
  child: AdminNestedValue
}

input AdminNestedValueInput {
  _type: ValueType!
  text: String
  childJson: String
  child: AdminNestedValueInput
}

enum _ValueListOrValueOne {
  ValueList
  ValueOne
}

enum _AdminValueListOrValueOne {
  AdminValueList
  AdminValueOne
}

type Query {
  node(id: ID!): Node
  nodes(ids: [ID!]!): [Node]
  adminEntity(id: ID!, version: Int): AdminEntity
  adminEntities(ids: [ID!]!): [AdminEntity]
  adminSearchEntities(query: AdminQueryInput, first: Int, after: String, last: Int, before: String): AdminEntityConnection
  entityHistory(id: ID!): EntityHistory
  publishingHistory(id: ID!): PublishingHistory
}

type Mutation {
  publishEntities(entities: [EntityVersionInput!]!): [EntityPublishPayload!]
  unpublishEntities(ids: [ID!]!): [EntityPublishPayload!]
  archiveEntity(id: ID!): EntityPublishPayload
  unarchiveEntity(id: ID!): EntityPublishPayload
  createFooEntity(entity: AdminFooCreateInput!): AdminFoo
  updateFooEntity(entity: AdminFooUpdateInput!): AdminFoo
  createBarEntity(entity: AdminBarCreateInput!): AdminBar
  updateBarEntity(entity: AdminBarUpdateInput!): AdminBar
}
"
`;
